<resources>
    <string name="app_name">Spo!ler Alert</string>

    <string name="expiring">EXPIRING SOON</string>
    <string name="ready">READY TO USE</string>
    <string name="fresh">FRESH</string>

    <string name="open_grocery_list">Open Grocery List</string>

    <string name="add_an_item">ADD AN ITEM</string>
    <string name="item_name">Name:</string>
    <string name="item_name_hint">Enter grocery item name</string>
    <string name="item_food_group">Food Group:</string>
    <string name="item_quantity">Quantity:</string>
    <string name="item_quantity_hint">Enter number of items</string>
    <string name="item_weight">Weight:</string>
    <string name="item_price">Price:</string>
    <string name="item_price_hint">Enter cost of the grocery</string>
    <string name="freezer_status">Is the item \nin the freezer?</string>
    <string name="item_expiration">Expiration Date:</string>
    <string name="spo">SPO</string>
    <string name="exclamation">!</string>
    <string name="ler_alert">LER ALERT</string>
    <string name="save_the_world_by_saving_your_wallet">Save the world, by saving your wallet</string>

    <string-array name="food_groups">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Grains</item>
        <item>Protein</item>
        <item>Dairy</item>
    </string-array>

    <string-array name="grocery_sorting">
        <item>Alphabetical</item>
        <item>Expiration Date</item>
        <item>Food Group</item>
    </string-array>

    <string-array name="bar_graph_sorting">
        <item>Money Spent</item>
        <item>Money Waste</item>
        <item>Total Money Used</item>
        <item>Food Bought</item>
        <item>Food Wasted</item>
        <item>Total Food Used</item>
        <item>Money Overview</item>
    </string-array>

    <string-array name="recent_list_filters">
        <item>All Recent Purchases</item>
        <item>Recently Eaten</item>
        <item>Recently Wasted</item>
    </string-array>

</resources>