<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recent_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    tools:context=".RecentDetailFragment">

    <!-- Decorative background circles -->
    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/green_faded_circle"
        android:alpha="0.25"
        android:translationX="-120dp"
        android:translationY="-90dp"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="800dp"
        android:layout_height="800dp"
        android:alpha="0.25"
        android:background="@drawable/green_faded_circle"
        android:translationX="-350dp"
        android:translationY="400dp"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:alpha="0.3"
        android:background="@drawable/yellow_faded_circle"
        android:translationX="-20dp"
        android:translationY="70dp"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Dropdown for selecting which recent list to show -->
    <Spinner
        android:id="@+id/recent_list_filter_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_square"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner" />

    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/spo"
            android:textStyle="bold"
            android:textSize="32sp"/>

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/exclamation"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="#00b215"/>

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/ler_alert"
            android:textStyle="bold"
            android:textSize="32sp"/>
    </LinearLayout>

    <!-- Scrollable content -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/recent_scroll_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/recent_list_filter_spinner"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@android:color/transparent"
            app:cardElevation="4dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:background="@drawable/rounded_square">

                <TextView
                    android:id="@+id/recent_list_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="All Recent Purchases"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:textColor="@color/spoiler_green"
                    android:layout_margin="10dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_full_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="@drawable/rounded_square"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"/>

    <!-- Bottom Navigation Bar -->
    <include
        android:id="@+id/bottom_bar"
        layout="@layout/bottom_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
